--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,12 @@
 {
   "extends": "airbnb",
   "parser": "babel-eslint",
+  "globals": {
+    "fetch": false
+  },
+  "env":{
+    "browser": true
+  },
   "rules": {
     "react/jsx-filename-extension": [
       1,
